# mathline

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/agent/: mod.rs  ollama.rs
src/interpreter/: evaluator.rs  expression.rs  lexer.rs  mod.rs  token.rs  value.rs
src/parser/: expression.rs  lexer.rs  mod.rs  token.rs
