[package]
name = "mathline"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
async-trait = "0.1.89"
fallible-iterator = "0.3.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.15"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
